--- a/_config.yml
+++ b/_config.yml
@@ -18,20 +18,22 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Stowarzyszenie Rodziców przy Szkole Polskiej im. Marii Skłodowskiej-Curie w Zurychu
+title: "Stowarzyszenie Rodziców przy Szkole Polskiej im. Marii Skłodowskiej-Curie w Zurychu"
 email: devnook@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Strona Stowarzyszenia Rodziców przy Szkole Polskiej im. Marii Skłodowskiej-Curie w Zurychu
+  "Strona Stowarzyszenia Rodziców przy Szkole Polskiej im. Marii Skłodowskiej-Curie w Zurychu"
 baseurl: "/szkola.ch" # the subpath of your site, e.g. /blog
 url: "szkola.ch" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
-github_username:  devnook
+# github_username:  devnook
 
 # Build settings
-# theme: jekyll-theme-minimal
-remote_theme: minimal-mistakes-jekyll
+theme: jekyll-theme-minimal
+# remote_theme: minimal-mistakes-jekyll
+# remote_theme: mmistakes/minimal-mistakes
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default.
